--- a/greentrust/src/styles/globals.css
+++ b/greentrust/src/styles/globals.css
@@ -51,3 +51,17 @@
     @apply rounded-none;
   }
 }
+
+@layer components {
+  .react-multiple-carousel__arrow {
+    @apply hidden;
+  }
+
+  .carousel-dot-list button {
+    @apply border-darkGray border-[1.5px];
+  }
+
+  .carousel-dot-list li.react-multi-carousel-dot--active button {
+    @apply !bg-gray/20;
+  }
+}
