--- a/greentrust/src/styles/globals.css
+++ b/greentrust/src/styles/globals.css
@@ -12,7 +12,7 @@
   h1 {
     @apply text-4xl font-bold text-darkPrimary mb-10;
   }
-  
+
   h2 {
     @apply text-3xl text-primary font-bold mb-8;
   }
@@ -67,5 +67,17 @@
 
   #req-count-badge {
     @apply hidden;
+  }
+
+  div#google_translate_element>div>span {
+    @apply !hidden;
+  }
+
+  div.skiptranslate.goog-te-gadget {
+    font-size: 0;
+  }
+
+  select.goog-te-combo{
+    @apply !hidden;
   }
 }
